# e-commerce_drf

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
docker/: entrypoint-web.sh
requirements/: dev.txt
src/: db.sqlite3  settings.py  urls.py
src/store/: models.py  serializers.py  urls.py  views.py
